# cppast

./: .clang-format  .gitignore  .gitmodules  .gitmodules.original  .travis.yml  .ycm_extra_conf.py.in  C++ Types.xmind  CMakeLists.txt  LICENSE.md  README.md  TODO.md  appveyor.yml  azure-pipelines.yml  main.cpp
.github/: FUNDING.yml  issue_template.md
.github/workflows/: ci.yml
bazel/: .gitignore  README.md  WORKSPACE
cmake/: CodeCoverage.cmake  DisableWNoExceptType.cmake
example/: CMakeLists.txt  README.md  ThreadPool.h  ast_printer.cpp  comparison.cpp  documentation_generator.cpp  enum_category.cpp  enum_to_string.cpp  example_parser.hpp  serialization.cpp
include/cppast/: astdump_parser.hpp  code_generator.hpp  compile_config.hpp  cpp_alias_template.hpp  cpp_array_type.hpp  cpp_attribute.hpp  cpp_class.hpp  cpp_class_template.hpp  cpp_concept.hpp  cpp_decltype_type.hpp  cpp_entity.hpp  cpp_entity_container.hpp  cpp_entity_index.hpp  cpp_entity_kind.hpp  cpp_entity_ref.hpp  cpp_entity_type.hpp  cpp_enum.hpp  cpp_expression.hpp  cpp_file.hpp  cpp_forward_declarable.hpp  cpp_friend.hpp  cpp_function.hpp  cpp_function_template.hpp  cpp_function_type.hpp  cpp_function_types.hpp  cpp_language_linkage.hpp  cpp_member_function.hpp  cpp_member_variable.hpp  cpp_namespace.hpp  cpp_preprocessor.hpp  cpp_scope.hpp  cpp_static_assert.hpp  cpp_storage_class_specifiers.hpp  cpp_storage_specifiers.hpp  cpp_template.hpp  cpp_template_parameter.hpp  cpp_token.hpp  cpp_type.hpp  cpp_type_alias.cpp  cpp_type_alias.hpp  (+9 more)
include/cppast/detail/: assert.hpp  info_tracking_logger.hpp  intrusive_list.hpp
include/cppast/detail/parser/: ast.hpp  buffered_lexer.hpp  fake_lexer.hpp  istream_lexer.hpp  lexer.hpp  parser.hpp  token.hpp
include/cppast/detail/utils/: format.hpp  overloaded_function.hpp
src/: CMakeLists.txt  code_generator.cpp  cpp_alias_template.cpp  cpp_attribute.cpp  cpp_class.cpp  cpp_class_template.cpp  cpp_concept.cpp  cpp_entity.cpp  cpp_entity_index.cpp  cpp_entity_kind.cpp  cpp_entity_ref.cpp  cpp_entity_type.cpp  cpp_enum.cpp  cpp_expression.cpp  cpp_file.cpp  cpp_forward_declarable.cpp  cpp_friend.cpp  cpp_function.cpp  cpp_function_template.cpp  cpp_language_linkage.cpp  cpp_member_function.cpp  cpp_member_variable.cpp  cpp_namespace.cpp  cpp_preprocessor.cpp  cpp_static_assert.cpp  cpp_template_parameter.cpp  cpp_token.cpp  cpp_type.cpp  cpp_type_alias.cpp  cpp_variable.cpp  cpp_variable_template.cpp  diagnostic_logger.cpp  parser.cpp  visitor.cpp
src/astdump/: astdump_parser.cpp  enum_parser.cpp  expression_parser.cpp  language_linkage_parser.cpp  namespace_parser.cpp  parse_functions.cpp  parse_functions.hpp  type_parser.cpp
src/detail/: info_tracking_logger.cpp
src/detail/parser/: ast.cpp  buffered_lexer.cpp  fake_lexer.cpp  istream_lexer.cpp  lexer.cpp  lexer_example.cpp  parser.cpp  parser_example.cpp  token.cpp
src/detail/utils/: format.cpp
src/libclang/: class_parser.cpp  concept_parser.cpp  cxtokenizer.cpp  cxtokenizer.hpp  debug_helper.cpp  debug_helper.hpp  enum_parser.cpp  expression_parser.cpp  friend_parser.cpp  function_parser.cpp  language_linkage_parser.cpp  libclang_parser.cpp  libclang_visitor.hpp  namespace_parser.cpp  parse_error.hpp  parse_functions.cpp  parse_functions.hpp  preprocessor.cpp  preprocessor.hpp  raii_wrapper.hpp  template_parser.cpp  tokenizer.cpp  tokenizer.hpp  type_parser.cpp  variable_parser.cpp
test/: CMakeLists.txt  code_generator.cpp  cpp_alias_template.cpp  cpp_attribute.cpp  cpp_class.cpp  cpp_class_template.cpp  cpp_concept.cpp  cpp_enum.cpp  cpp_friend.cpp  cpp_function.cpp  cpp_function_template.cpp  cpp_language_linkage.cpp  cpp_member_function.cpp  cpp_member_variable.cpp  cpp_namespace.cpp  cpp_preprocessor.cpp  cpp_static_assert.cpp  cpp_template_parameter.cpp  cpp_token.cpp  cpp_type_alias.cpp  cpp_variable.cpp  cpp_visitor.cpp  integration.cpp  libclang_parser.cpp  parser.cpp  preprocessor.cpp  test.cpp  test_parser.hpp  visitor.cpp
test/detail/parser/: istream_lexer.cpp  logger_mock.hpp  parser.cpp  syntax_generator.cpp  syntax_generator.hpp  token_generator.hpp
tool/: CMakeLists.txt  cppast2json.cpp  cppast2json.h  main.cpp
